-----------------------------------------------------------------------
Perfect Error Documents - CHANGELOG
-----------------------------------------------------------------------
PED v.1.7.3 - 2017-06-27 James Anderson Jr. <james@jamesandersonjr.com>
-----------------------------------------------------------------------

- Added itemprop="url" property to Google "Structured-Data" tags
- Added "og:image:secure_url" for SSL/TLS/HTTPS secure domains

-----------------------------------------------------------------------
PED v.1.7.2 - 2017-06-08 James Anderson Jr. <james@jamesandersonjr.com>
-----------------------------------------------------------------------

- Removed unnecessary image files (replaced with script-embedded Base64)
- Added new keywords
- Added new 'Open Graph' tags
- Added new configuration settings
- Fixed grammatical errors, in comments
- Using internal CSS, instead of external CSS, to reduce external requirements
- Switched royalty links in license, and back-end of script, to SSL/TLS/HTTPS versions
- Included changelog into GitHub project

-----------------------------------------------------------------------
PED v.1.7.1 - 2017-05-31 James Anderson Jr. <james@jamesandersonjr.com>
-----------------------------------------------------------------------

- Minor bug fixes, and improvements

-----------------------------------------------------------------------
PED v.1.7.0 - 2017-05-08 James Anderson Jr. <james@jamesandersonjr.com>
-----------------------------------------------------------------------

- Improved mobile device support
- Added Google 'Structured Data' tags
- Added 'Open Graph' tags
- Improved SEO
- Minor bug fixes, and improvements
- Started changelog